@@ -1,10 +1,0 @@
-<pdf type="zarafaDynamicGroupType" filename="printLogo.jpg" headline="LDAP Account Manager">
-	<section name="_zarafaDynamicGroup_cn">
-		<entry name="zarafaDynamicGroup_mail" />
-		<entry name="zarafaDynamicGroup_zarafaAliases" />
-		<entry name="zarafaDynamicGroup_zarafaBase" />
-		<entry name="zarafaDynamicGroup_zarafaFilter" />
-		<entry name="zarafaDynamicGroup_zarafaAccount" />
-		<entry name="zarafaDynamicGroup_zarafaHidden" />
-	</section>
-</pdf>
