@@ -3571,7 +3571,7 @@ AuthorizedKeysCommandUser root</literallayout>
       <literallayout>
 </literallayout>
 
-      <para>Examples for your Zarafa ldap.cfg:</para>
+      <para>Examples for your Kopano ldap.cfg:</para>
 
       <para>"Send as" attribute: dn</para>
 
@@ -3910,236 +3910,6 @@ AuthorizedKeysCommandUser root</literallayout>
           </imageobject>
         </mediaobject>
       </screenshot>
-    </section>
-  </section>
-
-  <section id="s_zarafa">
-    <title>Zarafa (LAM Pro)</title>
-
-    <para>Zarafa is an OpenSource collaboration software. LAM Pro provides
-    support to manage Zarafa server entries, users and groups. It covers all
-    settings for these types including resource and quota settings.</para>
-
-    <para>LAM Pro is an official Zarafa Certified Integration.</para>
-
-    <para><inlinemediaobject>
-        <imageobject>
-          <imagedata fileref="images/zarafa_logo_integrations_certified_140px.png"/>
-        </imageobject>
-      </inlinemediaobject></para>
-
-    <section>
-      <title>Configuration</title>
-
-      <para>To enable Zarafa support in LAM Pro please activate the Zarafa
-      modules for the Users, Groups and Hosts account types in you server
-      profile:</para>
-
-      <screenshot>
-        <mediaobject>
-          <imageobject>
-            <imagedata fileref="images/zarafa1.png"/>
-          </imageobject>
-        </mediaobject>
-      </screenshot>
-
-      <para><emphasis role="bold">Attention:</emphasis> LAM Pro uses the
-      Zarafa OpenLDAP schema as default. This schema fits for OpenLDAP,
-      OpenDJ, Apache Directory server and other common LDAP servers. If you
-      run Samba 4 or Active Directory then you need to switch the schema to
-      "Active Directory" on the module settings tab:</para>
-
-      <screenshot>
-        <mediaobject>
-          <imageobject>
-            <imagedata fileref="images/zarafa9.png"/>
-          </imageobject>
-        </mediaobject>
-      </screenshot>
-
-      <para>You can configure which parts of the Zarafa user options should be
-      enabled. E.g. if you do not want to manage quotas per user then you can
-      hide these options on the tab "Module settings".</para>
-
-      <literallayout>
-</literallayout>
-
-      <para><emphasis role="bold">"Send as" attribute:</emphasis> Here you can
-      specify how "Send as" privileges should be managed. LAM supports "uid"
-      and "dn".</para>
-
-      <para>If you select "uid" the LAM will store user names in the
-      zarafaSendAsPrivilege attribute. This way you are restricted to specify
-      user accounts as "Send as" allowed.</para>
-
-      <para>You can also set this option to "dn" and LAM will store DNs in the
-      zarafaSendAsPrivilege attribute. In this case you may specify users and
-      groups as "Send as" allowed.</para>
-
-      <literallayout>
-</literallayout>
-
-      <para>Examples for your Zarafa ldap.cfg:</para>
-
-      <para>"Send as" attribute: <emphasis role="bold">dn</emphasis></para>
-
-      <para>ldap_user_sendas_attribute_type = dn</para>
-
-      <literallayout>
-</literallayout>
-
-      <para>"Send as" attribute: <emphasis role="bold">uid</emphasis></para>
-
-      <para>ldap_user_sendas_attribute_type = text</para>
-
-      <para>ldap_user_sendas_relation_attribute = uid</para>
-
-      <para><literallayout>
-Attention: If the Active Directory schema is used then LAM will always use dn and ignore this setting.
-
-
-</literallayout></para>
-
-      <para><emphasis role="bold">Features:</emphasis> Zarafa 7 allows to
-      enable IMAP/POP3 for each user. Please hide the option "Features" if you
-      use Zarafa 6.x.</para>
-
-      <screenshot>
-        <mediaobject>
-          <imageobject>
-            <imagedata fileref="images/zarafa2.png"/>
-          </imageobject>
-        </mediaobject>
-      </screenshot>
-
-      <section>
-        <title>Users</title>
-
-        <para>This is an example of the user edit page with all possible
-        settings. This includes email settings, quotas and some options (e.g.
-        hide from address book). You can also set the resource type and
-        capacity for meeting rooms and equipment. The Zarafa extension can be
-        added and removed at any time for every user.</para>
-
-        <para>Please note that the option "Features" requires Zarafa 7. Please
-        hide this option in the LAM server profile if you run Zarafa
-        6.x.</para>
-
-        <screenshot>
-          <mediaobject>
-            <imageobject>
-              <imagedata fileref="images/zarafa3.png"/>
-            </imageobject>
-          </mediaobject>
-        </screenshot>
-      </section>
-
-      <section>
-        <title>Contacts</title>
-
-        <para>LAM Pro can manage your Zarafa contact entries. You can set the
-        email aliases and "send as" privileges. Additionally, accounts may be
-        hidden in the address book or disabled.</para>
-
-        <para>Please note that you can either use the Zarafa user module or
-        Zarafa contact. LAM Pro will disable the other tab when enabling one
-        of them.</para>
-
-        <screenshot>
-          <mediaobject>
-            <imageobject>
-              <imagedata fileref="images/zarafa8.png"/>
-            </imageobject>
-          </mediaobject>
-        </screenshot>
-      </section>
-
-      <section>
-        <title>Groups</title>
-
-        <para>This is the edit page for groups. You can enter an email address
-        and additional aliases for your groups. It is also possible to specify
-        options (e.g. hide from address book). The extension can be
-        added/removed dynamically.</para>
-
-        <para>Please note that the option "Send-as privileges" requires the
-        Zarafa 7.0.3 schema. Please hide this option in the LAM server profile
-        if you run Zarafa &lt; 7.0.3.</para>
-
-        <screenshot>
-          <mediaobject>
-            <imageobject>
-              <imagedata fileref="images/zarafa4.png"/>
-            </imageobject>
-          </mediaobject>
-        </screenshot>
-      </section>
-
-      <section>
-        <title>Servers</title>
-
-        <para>The Zarafa extension for host accounts allows to set the
-        connection ports and file path. You can add/remove the extension at
-        any time.</para>
-
-        <para>Setting the public store option is only possible for new host
-        entries.</para>
-
-        <para>Please note that the proxy URL option requires the Zarafa 7.1
-        schema. Please hide this option in your LAM server profile if you use
-        an older version.</para>
-
-        <screenshot>
-          <mediaobject>
-            <imageobject>
-              <imagedata fileref="images/zarafa5.png"/>
-            </imageobject>
-          </mediaobject>
-        </screenshot>
-      </section>
-
-      <section>
-        <title>Address lists</title>
-
-        <para>Zarafa allows to store address lists in LDAP. You need to define
-        a search base and LDAP filter for each address list. E.g. entering
-        "ou=people,dc=company,dc=com" as base and "uid=*" will select all
-        users that are stored in "ou=people,dc=company,dc=com".</para>
-
-        <para>You can also hide your lists from the address book or
-        temporarily disable them.</para>
-
-        <screenshot>
-          <mediaobject>
-            <imageobject>
-              <imagedata fileref="images/zarafa6.png"/>
-            </imageobject>
-          </mediaobject>
-        </screenshot>
-      </section>
-
-      <section>
-        <title>Dynamic groups</title>
-
-        <para>Zarafa allows to define dynamic groups in LDAP. You need to
-        define a search base and LDAP filter for each group. E.g. entering
-        "ou=people,dc=company,dc=com" as base and "uid=*" will select all
-        users that are stored in "ou=people,dc=company,dc=com".</para>
-
-        <para>Dynamic groups may have an email address and multiple email
-        alias addresses.</para>
-
-        <para>You can also hide your dynamic groups from the address book or
-        temporarily disable them.</para>
-
-        <screenshot>
-          <mediaobject>
-            <imageobject>
-              <imagedata fileref="images/zarafa7.png"/>
-            </imageobject>
-          </mediaobject>
-        </screenshot>
-      </section>
     </section>
   </section>
 
