@@ -2,6 +2,7 @@ June 2022 8.0
   - Extended user account status and locking options
   - Unix: added Gecos to profile editor
   - 389ds: added hints why login failed if account is locked/deactivated/expired
+  - Removed Zarafa support (please switch to Kopano)
   - Fixed bugs:
    -> Hidden account is displayed (257)
    -> Security issues in PDF editor and profile editor
